# -LLM-

./: README.md
src/my_robot_control/: llm_control.py
src/my_robot_hardware/: CMakeLists.txt  my_robot_hardware_plugin_description.xml  package.xml
src/my_robot_hardware/include/my_robot_hardware/: my_robot_hardware.hpp
src/my_robot_hardware/scripts/: set_arm_center.sh
src/my_robot_hardware/src/: my_robot_hardware.cpp  set_arm_center.cpp  set_position_example.cpp  sts3215_example.cpp
src/my_robot_moveit_config/: package.xml
src/my_robot_moveit_config/config/: moveit_controllers.yaml  my_robot.srdf  ros2_controllers.yaml
